--- a/generic_portal_client/src/main/webapp/portal.html
+++ b/generic_portal_client/src/main/webapp/portal.html
@@ -186,15 +186,47 @@
                 </div>
               </div>
               <div class="section">
-                <div class="section-title">Lab Applications</div>
+                <div class="section-title">Lab Toolkits</div>
                 <div class="section-body">
                   <ul class="icons">
                     <li>
-                      <a href="http://192.168.80.5:38080/generic_report_client/" target="_blank">
-                        <i class="fa fa-file-pdf-o"></i>
-                        <div>Report System</div>
+                      <a href="http://192.168.80.5:38080/generic_datasource_client/" target="_blank">
+                        <i class="fa fa-database"></i>
+                        <div>Data Source</div>
                       </a>
                     </li>
+                    <li>
+                      <a href="http://192.168.80.5:38080/generic_chart_client/" target="_blank">
+                        <i class="fa fa-line-chart"></i>
+                        <div>Chart</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.80.5:38080/generic_dashboard_client/" target="_blank">
+                        <i class="fa fa-dashboard"></i>
+                        <div>Dashboard</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.80.5:38080/generic_report_client/" target="_blank">
+                        <i class="fa fa-file-pdf-o"></i>
+                        <div>Report</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="" target="_blank">
+                        <i class="fa fa-cubes"></i>
+                        <div>ODA</div>
+                      </a>
+                    </li>
+
+                  </ul>
+                </div>
+              </div>
+              <div class="section">
+                <div class="section-title">Lab Scripter System</div>
+                <div class="section-body">
+                  <ul class="icons">
                     <li>
                       <a href="http://lysso.haohandata.com:8080/openam" target="_blank">
                         <i class="fa fa-credit-card"></i>
