--- a/generic_datasource_client/src/main/webapp/business_kit.html
+++ b/generic_datasource_client/src/main/webapp/business_kit.html
@@ -456,7 +456,7 @@
                                                     <div class="col-xs-10">
                                                         <!-- ko foreach: tableModel().headerViewData -->
                                                         <div class="col-xs-8" style="padding-left: 0px;padding-right: 0px;"data-bind="visible:$data.isChecked">
-                                                            <input type="text" data-bind="value:$data.data" class="form-control" placeholder="JSON parse rules: response.result">
+                                                            <input type="text" data-bind="value:$data.data" class="form-control" placeholder="name">
                                                         </div>
                                                         <!-- /ko -->
                                                         <div class="col-xs-2">
