--- a/generic_datasource_client/src/main/webapp/modal_connection_remove.html
+++ b/generic_datasource_client/src/main/webapp/modal_connection_remove.html
@@ -100,6 +100,7 @@
 
     function removeConnection() {
         if (arguments && arguments[1]) {
+            debugger;
             if (arguments[1].response.result.length > 0) {
                 var result = arguments[1].response.result[0];
                 var num = result[0];
