--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
@@ -193,6 +193,7 @@
   <script src="assets/reference/gridstack/gridstack.all.js"></script>
   <script src="assets/reference/echarts/echarts-min.js"></script>
   <script src="assets/reference/echarts/dataTools.js"></script>
+  <script src="assets/reference/echarts/worldcloud.js" ></script>
   <!-- Javascript for Matrix Self Owned -->
   <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
   <script src="assets/self-owned/js/generic/generic_cache.js"></script>
