--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_choose_data_source.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_choose_data_source.html
@@ -95,7 +95,7 @@
                             </label>
                             <div class="col-sm-7">
                                 <select data-bind="options: dataSource.availableDataSource,optionsText: function(item) {
-             return item.id + ' (' +item.name + ')'
+             return item.name + ' (' +JSON.parse(item.stringzeta).mode + ')'
          },value: dataSource.selectedDataSource,
              optionsCaption: '选择...',
                                         " class="form-control" style="width:400px"></select>
@@ -275,7 +275,9 @@
             var businessPOJO = new BusinessPOJO();
             genericModalViewModel.businessPOJO(businessPOJO);
             genericModalViewModel.businessPOJO().dataSource.selectedDataSource.subscribe(function (newValue) {
-                getSqlResult();
+
+                    getApiResult();
+
                 genericModalViewModel.businessPOJO().isTransferT(false);
             });
         })();
@@ -299,6 +301,9 @@
             //validate logic...
 
             //validate
+            if (!chartViewModel.chart) {
+                errorMessages.push("请先选择相应图的类型");
+            }
 
             return errorMessages;
         }
@@ -320,8 +325,9 @@
                 chartViewModel.dynamic_config.columns(columns);     
             }
             var ds_setting = {
-                'sql': genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringbeta.trim(),
-                'dbName': genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringalpha,
+//                'sql': genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringbeta.trim(),
+//                'dbName': genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringalpha,
+                'ds': genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringzeta,
                 'header': DataTransferPOJO.header2json(genericModalViewModel.businessPOJO().table().headerViewData()),
                 'isTransferT': genericModalViewModel.businessPOJO().isTransferT(),
                 'chartType': chartType,
@@ -348,9 +354,10 @@
                 },
                 "eqMap": {
                     "deleted": false,
-                    "type": "SOURCE_SQL_CONFIGURATION"
                 },
-                "inMap": {},
+                "inMap": {
+                     "type": ["SOURCE_SQL_CONFIGURATION", "GENERIC_MATRIX_DATA_SOURCE"]
+                },
             };
             var data = {
                 'queryJson': $.toJSON(requestPOJO)
@@ -367,41 +374,62 @@
         }
     </script>
     <script>
-        function getSqlResult() {
-            var requestPOJO = {
-                "dbName": genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringalpha,
-                "sql": genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringbeta
-            };
-            var data = {
-                'queryInfo': $.toJSON(requestPOJO)
-            };
-            $.serverRequest($.getServerRoot() + '/generic_charting_client/api/connection/query', data, "successGetSqlResult", "failedGetSqlResult", "serverGetSqlResult");
-        };
-
-        $.subscribe("successGetSqlResult", successGetSqlResult);
-        $.subscribe("failedGetSqlResult", failedGetSqlResult);
-        $.subscribe("successGetSqlResult", serverGetSqlResult);
-        function successGetSqlResult() {
-            if(arguments && arguments[1]) {
-                genericModalViewModel.businessPOJO().dataSource.sqlResult(arguments[1].result[0])
-                // var data = DataTransferPOJO.transferHiveDataRaw(arguments[1].result[0]);
-                // console.log(data);
-                // console.log(DataTransferPOJO.transferT(data.result))
-                var rawData = DataTransferPOJO.transferHiveDataRaw(arguments[1].result[0]);
-                genericModalViewModel.businessPOJO().rawDataForTransferT = ClonePOJO.deepCloneTwoDimentionArray(rawData.result);
-                var tableData = DataTransferPOJO.divideHeaderFromData(rawData.result);
-                var tableModel = new ThinListViewModel();
-                tableModel.buildData(tableData.result);
-                tableModel.columnNames(tableData.header);
-                tableModel.isDisplayPager(true);
-                tableModel.buildView();
-                tableModel.pageMaxSize(5);
-                genericModalViewModel.businessPOJO().table(tableModel);
-                genericModalViewModel.businessPOJO().table_header(tableModel.headerViewData());
+        function getApiResult(){
+            var ds = JSON.parse(genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringzeta);
+            var url = ds.attr.ds;
+            var rest_mode = ds.attr.rest_mode;
+            var request_params = ds.attr.request_params || null;
+            if(request_params){
+                request_params = JSON.parse(request_params);
             }
-        };
-        function failedGetSqlResult() {};
-        function serverGetSqlResult() {};
+            $.serverRequest(url, request_params, "successGetApiResult", "failedGetApiResult", "serverGetApiResult", rest_mode, true, ds);
+            
+        }
+        $.subscribe("successGetApiResult", successGetApiResult);
+        function successGetApiResult() {
+            if (arguments && arguments[1]) {
+                var server_data = arguments[1].response;
+                var tableModel = new ThinListViewModel();
+                if(arguments[1].addtion.mode == "api"){
+                    if(arguments[1].addtion.attr.json_rule){
+                        var json_rule = arguments[1].addtion.attr.json_rule;
+                        var tmp = 'server_data.' + json_rule;
+                        server_data = eval(tmp);
+                    }
+                    debugger
+                    var rawData = DataTransferPOJO.serverJsonData2TableData(server_data);
+                    rawData.result.unshift(rawData.header)
+                    genericModalViewModel.businessPOJO().rawDataForTransferT = ClonePOJO.deepCloneTwoDimentionArray(rawData.result);
+                    var tableData = DataTransferPOJO.divideHeaderFromData(rawData.result);
+                    genericModalViewModel.businessPOJO().dataSource.sqlResult(tableData.result)
+
+                    tableModel.buildData(tableData.result);
+                    tableModel.columnNames(tableData.header);
+                    tableModel.isDisplayPager(true);
+                    tableModel.buildView();
+                    tableModel.pageMaxSize(5);
+                    if(arguments[1].addtion.header) {
+                        tableModel.headerViewData(arguments[1].addtion.attr.header_json);
+                    }
+                    genericModalViewModel.businessPOJO().table(tableModel);
+                    genericModalViewModel.businessPOJO().table_header(tableModel.headerViewData());
+                } else if(arguments[1].addtion.mode == "database") {
+                    server_data = server_data.result[0];
+                    genericModalViewModel.businessPOJO().dataSource.sqlResult(server_data)
+                    var rawData = DataTransferPOJO.transferHiveDataRaw(server_data);
+                    genericModalViewModel.businessPOJO().rawDataForTransferT = ClonePOJO.deepCloneTwoDimentionArray(rawData.result);
+//                    var tableData = DataTransferPOJO.transferHiveData(server_data);
+                    var tableData = DataTransferPOJO.divideHeaderFromData(rawData.result);
+                    tableModel.buildData(tableData.result);
+                    tableModel.columnNames(tableData.header);
+                    tableModel.isDisplayPager(true);
+                    tableModel.buildView();
+                    tableModel.pageMaxSize(5);
+                    genericModalViewModel.businessPOJO().table(tableModel);
+                    genericModalViewModel.businessPOJO().table_header(tableModel.headerViewData());
+                }
+            }
+        }
     </script>
     <script>
     function transferTData() {
@@ -422,3 +450,40 @@
     <script>
         getAvailableDataSource();
     </script>
+        <!--    <script>
+            function getSqlResult() {
+                var requestPOJO = {
+                    "dbName": genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringalpha,
+                    "sql": genericModalViewModel.businessPOJO().dataSource.selectedDataSource().stringbeta
+                };
+                var data = {
+                    'queryInfo': $.toJSON(requestPOJO)
+                };
+                $.serverRequest($.getServerRoot() + '/generic_charting_client/api/connection/query', data, "successGetSqlResult", "failedGetSqlResult", "serverGetSqlResult");
+            };
+    
+            $.subscribe("successGetSqlResult", successGetSqlResult);
+            $.subscribe("failedGetSqlResult", failedGetSqlResult);
+            $.subscribe("successGetSqlResult", serverGetSqlResult);
+            function successGetSqlResult() {
+                if(arguments && arguments[1]) {
+                    genericModalViewModel.businessPOJO().dataSource.sqlResult(arguments[1].result[0])
+                    // var data = DataTransferPOJO.transferHiveDataRaw(arguments[1].result[0]);
+                    // console.log(data);
+                    // console.log(DataTransferPOJO.transferT(data.result))
+                    var rawData = DataTransferPOJO.transferHiveDataRaw(arguments[1].result[0]);
+                    genericModalViewModel.businessPOJO().rawDataForTransferT = ClonePOJO.deepCloneTwoDimentionArray(rawData.result);
+                    var tableData = DataTransferPOJO.divideHeaderFromData(rawData.result);
+                    var tableModel = new ThinListViewModel();
+                    tableModel.buildData(tableData.result);
+                    tableModel.columnNames(tableData.header);
+                    tableModel.isDisplayPager(true);
+                    tableModel.buildView();
+                    tableModel.pageMaxSize(5);
+                    genericModalViewModel.businessPOJO().table(tableModel);
+                    genericModalViewModel.businessPOJO().table_header(tableModel.headerViewData());
+                }
+            };
+            function failedGetSqlResult() {};
+            function serverGetSqlResult() {};
+        </script>-->
