--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
@@ -143,7 +143,7 @@
       <!-- Matrix Dashboard Grid Template Begin -->
       <div style="display:none">
         <div class="grid-stack-item-content" id='draggableTemplate'>
-          <div class="card card-mini" style="box-shadow: none;height:90%;overflow-y: hidden">
+          <div class="card card-mini" style="box-shadow: none;height:100%;overflow-y: hidden">
             <div class="card-header grid-stack-item-header" style="padding: 8px 0px 0px 16px;">
               <div class="card-title">
                 <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
@@ -160,7 +160,7 @@
                     </span>
               </div>
             </div>
-            <div class="card-body" style="height:100%">
+            <div class="card-body" style="height:90%;padding: 8px 10px;">
               <div class="draggableTemplateContext" style="height:100%"></div>
             </div>
           </div>
