动态刷新与保存问题解决

--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_wordCloud.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_wordCloud.html
@@ -71,10 +71,13 @@
     function reset_series() {
         var tmp = $('#data_value_input').val();
 //        var cloud_shape = $("[name='radio_shape_config']").filter(":checked").val();
-        tmp = $.parseJSON(tmp); 
+        tmp = $.parseJSON(tmp);
         if (tmp && chartViewModel && chartViewModel.chart) {
             var option = _setWordCloud(tmp);
             chartViewModel.chart.setOption(option);
+            window.onresize = function () {
+                chartViewModel.chart.resize();
+            }
         }
     }
 
