--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_new_chart.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_content_new_chart.html
@@ -16,7 +16,7 @@
 
   function reset(){
     if(chart && chartViewModel){
-
+      clearInterval(interval);
       // ChartPOJO.newChart('main');
       ChartPOJO.cleanChart('main_chart');
       chartViewModel.chart = null;
