修改词云resize问题

--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_bar.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_bar.html
@@ -20,6 +20,7 @@
 
 <script>
   function initialize() {
+      debugger
     chart = ChartPOJO.generate_default_chart('tutorial_chart');
     chartCache['tutorial_chart'] = chart;
     
