--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_line.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_line.html
@@ -19,7 +19,8 @@
 
 
 <script>
-  function initialize() {
+  function initialize_tutorial() {
+      debugger
     chart = ChartPOJO.generate_default_chart('tutorial_chart');
     chartCache['tutorial_chart'] = chart;
 
@@ -33,5 +34,5 @@
 
   }
 
-  initialize();
+  initialize_tutorial();
 </script>
