--- a/generic_chart_client/src/main/webapp/module_chart_editor.html
+++ b/generic_chart_client/src/main/webapp/module_chart_editor.html
@@ -302,10 +302,13 @@
     <script src="assets/reference/knockout.js/knockout-3.3.0.js"></script>
     <script src="assets/reference/jquery-tiny-pubsub/tiny-pubsub.js"></script>
     <script src="assets/reference/markdown/showdown.js"></script>
-    <script src="assets/reference/echarts/echarts-min.js"></script>
+    <script src="assets/reference/echarts/echarts.js"></script>
+    <!--<script src='https://cdn.bootcss.com/echarts/3.7.2/echarts.simple.js'></script>-->
+    <script src="assets/reference/echarts/echarts-wordcloud.js"></script>
+
     <script src="assets/reference/echarts/dataTools.js"></script>
     <script src="assets/reference/echarts/geo/world.js"></script>
-    <script src="assets/reference/echarts/worldcloud.js"></script>
+
 
 
     <script src="assets/reference/bootstrap-fileinput/js/fileinput_ly.js"></script>
@@ -345,10 +348,10 @@
             }, 200);
         });
         function checkDynamicButton() {
-            
+
             var chartType = $('#chart_type_select').val();
-            var supportType = {"bar":'', "line":'', "scatter":'', "area":'',"parallel":'',"pie":'', "radar":'',"themeRiver":'', "boxplot":''}
-            if(chartType in supportType) {
+            var supportType = {"bar": '', "line": '', "scatter": '', "area": '', "parallel": '', "pie": '', "radar": '', "themeRiver": '', "boxplot": ''}
+            if (chartType in supportType) {
                 $('#radio_dynamic_data').attr('disabled', false);
                 return;
             }
