--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_wordCloud.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/config_wordCloud.html
@@ -61,6 +61,7 @@
         </div>
     </form>
 </div>
+
 <script>
     var cloudViewModel = {
         shape: ko.observable('circle'),
@@ -89,8 +90,13 @@
             series: [
                 {
                     type: 'wordCloud',
-                    shape: $("[name='radio_shape_config']").filter(":checked").val(),
-                    gridSize: 8,
+                    sizeRange: [10, 100],
+                    rotationRange: [-90, 90],
+                    rotationStep: 45,
+                    gridSize: 2,
+                    shape: 'pentagon',
+//                    maskImage: maskImage,
+                    drawOutOfBound: false,
                     textStyle: {
                         normal: {
                             fontFamily: '微软雅黑',
