--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_wordCloud.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/tutorial_wordCloud.html
@@ -115,90 +115,41 @@
                         {"name": " 互联", "value": " 22"},
                         {"name": " 哪", "value": " 23"},
                         {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},
-                        {"name": "澎湃", "value": "25"},
-                        {"name": " 暴晒", "value": " 14"},
-                        {"name": " 套件", "value": "13"},
-                        {"name": " 有", "value": " 24"},
-                        {"name": " 驾驶", "value": " 30"},
-                        {"name": " 满满", "value": " 1"},
-                        {"name": " 行驶", "value": " 2"},
-                        {"name": " 强烈", "value": "3"},
-                        {"name": " 轻盈", "value": "8"},
-                        {"name": " 沉稳", "value": "5"},
-                        {"name": " 1800公里", "value": " 1"},
-                        {"name": " 低", "value": " 2"},
-                        {"name": " 双", "value": " 18"},
-                        {"name": " 前后", "value": " 18"},
-                        {"name": " 跑车", "value": " 1"},
-                        {"name": " 互联", "value": " 22"},
-                        {"name": " 哪", "value": " 23"},
-                        {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},
-                        {"name": "澎湃", "value": "25"},
-                        {"name": " 暴晒", "value": " 14"},
-                        {"name": " 套件", "value": "13"},
-                        {"name": " 有", "value": " 24"},
-                        {"name": " 驾驶", "value": " 30"},
-                        {"name": " 满满", "value": " 1"},
-                        {"name": " 行驶", "value": " 2"},
-                        {"name": " 强烈", "value": "3"},
-                        {"name": " 轻盈", "value": "8"},
-                        {"name": " 沉稳", "value": "5"},
-                        {"name": " 1800公里", "value": " 1"},
-                        {"name": " 低", "value": " 2"},
-                        {"name": " 双", "value": " 18"},
-                        {"name": " 前后", "value": " 18"},
-                        {"name": " 跑车", "value": " 1"},
-                        {"name": " 互联", "value": " 22"},
-                        {"name": " 哪", "value": " 23"},
-                        {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},                        
-                        {"name": "澎湃", "value": "25"},
-                        {"name": " 暴晒", "value": " 14"},
-                        {"name": " 套件", "value": "13"},
-                        {"name": " 有", "value": " 24"},
-                        {"name": " 驾驶", "value": " 30"},
-                        {"name": " 满满", "value": " 1"},
-                        {"name": " 行驶", "value": " 2"},
-                        {"name": " 强烈", "value": "3"},
-                        {"name": " 轻盈", "value": "8"},
-                        {"name": " 沉稳", "value": "5"},
-                        {"name": " 1800公里", "value": " 1"},
-                        {"name": " 低", "value": " 2"},
-                        {"name": " 双", "value": " 18"},
-                        {"name": " 前后", "value": " 18"},
-                        {"name": " 跑车", "value": " 1"},
-                        {"name": " 互联", "value": " 22"},
-                        {"name": " 哪", "value": " 23"},
-                        {"name": " 说", "value": " 31"},
-                        {"name": " 全面", "value": " 15"},                      
+                        {"name": " 全面", "value": " 15"},             
                         {"name": " 搞定", "value": " 12"}
                     ],
             "cloudDiv": "tutorial_chart"
         };
-        function _setWordCloud(cloudData) {
-            var option = {
-                series: [
-                    {
-                        type: 'wordCloud',
-                        shape: 'pentagon',
-                        gridSize: 8,
-                        textStyle: {
-                            normal: {
-                                fontFamily: '微软雅黑',
-                                color: function () {
-                                    var colors = ['#fda67e', '#81cacc', '#cca8ba', "#88cc81", "#82a0c5", '#fddb7e', '#735ba1', '#bda29a', '#6e7074', '#546570', '#c4ccd3'];
-                                    return colors[parseInt(Math.random() * 10)];
-                                }
+    function _setWordCloud(cloudData, max, min) {
+        if (max && min) {
+
+        }
+        var option = {
+            series: [
+                {
+                    type: 'wordCloud',
+                    sizeRange: [10, 100],
+                    rotationRange: [-90, 90],
+                    rotationStep: 45,
+                    gridSize: 2,
+                    shape: 'pentagon',
+//                    maskImage: maskImage,
+                    drawOutOfBound: false,
+                    textStyle: {
+                        normal: {
+                            fontFamily: '微软雅黑',
+                            color: function () {
+                                var colors = ['#fda67e', '#81cacc', '#cca8ba', "#88cc81", "#82a0c5", '#fddb7e', '#735ba1', '#bda29a', '#6e7074', '#546570', '#c4ccd3'];
+                                return colors[parseInt(Math.random() * 10)];
                             }
-                      },
-                        data: cloudData
-                    }
-                ]
-            };
-            return option;
+                        }
+                    },
+                    data: cloudData
+                }
+            ]
         };
+        return option;
+    }
 //词云图初始化  
         function initWordCloud(wordCloudData) {
             var option = _setWordCloud(wordCloudData.cloudData);
