--- a/generic_dashboard_client/src/main/webapp/assets/self-owned/html/dashboard/modal_content_save.html
+++ b/generic_dashboard_client/src/main/webapp/assets/self-owned/html/dashboard/modal_content_save.html
@@ -173,7 +173,7 @@
       console.log(arguments[1]);
       var token = arguments[1].result[0]; //ab38e4a4ede0768a8e1b8bde73b3e7a6a893d048a0f3882a68217733ce314240
 
-      $.serverRequest($.getServerRoot() + '/service_generic_query/api/share/fetch/' + token, null, "MATRIX_SHARE_SUCCESS", "FAILED_LISTENER", "SERVER_FAILED_LISTENER");
+      $.serverRequest($.getServerRoot() + '/service_generic_query/api/share/fetch/' + token, null, "MATRIX_ADD_SHARE_SUCCESS", "FAILED_LISTENER", "SERVER_FAILED_LISTENER");
     }
   }
 
@@ -197,7 +197,7 @@
   }
 
 
-  $.subscribe("MATRIX_SHARE_SUCCESS", successListener);
+  $.subscribe("MATRIX_ADD_SHARE_SUCCESS", successListener);
 
   function successListener() {
       if (arguments && arguments[1]) {
@@ -225,7 +225,6 @@
     }
     //'type': 'MATRIX_DASHBOARD'
     //'tag': SAVE,SHARE
-
     var tag = genericModalViewModel.businessPOJO().is_share() ? 'SHARE' : 'SAVE';
     var json = vm.businessPOJO().serialize_dashboard();
 
