动态刷新问题

--- a/generic_dashboard_client/src/main/webapp/index.html
+++ b/generic_dashboard_client/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <script language="javascript" type="text/javascript">
-         window.location.href="module_dashboard.html";
+         window.location.href="module_gallery.html";
         </script>
     </body>
 </html>
