--- a/generic_chart_client/src/main/webapp/module_chart_editor.html
+++ b/generic_chart_client/src/main/webapp/module_chart_editor.html
@@ -356,6 +356,8 @@
                 return;
             }
             $('#radio_manual_add').prop('checked', true);
+            $('#data_from_manual').css('display', '');
+            $('#data_from_dynamic').css('display', 'none');
             $('#radio_dynamic_data').attr('disabled', true);
         }
     </script>
