--- a/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_title_config.html
+++ b/generic_chart_client/src/main/webapp/assets/self-owned/html/chart/modal/modal_title_config.html
@@ -32,7 +32,7 @@
                     <div class="form-group" style="margin-bottom: 20px">
                         <label class="col-sm-2 control-label">Color</label>
                         <div class="col-sm-4">
-                            <input id="title_color_input" type="text" class="form-control"  aria-describedby="basic-addon1" placeholder="#333333" data-bind="value:textStyle.color">
+                            <input id="title_colors_input" type="text" class="form-control"  aria-describedby="basic-addon1" placeholder="#333333" data-bind="value:textStyle.color">
                         </div>
                         <label class="col-sm-2 control-label">FontSize</label>
                         <div class="col-sm-4">
@@ -75,7 +75,7 @@
                     top:$('#title_top_input').val(),
                     
                     textStyle: {
-                        color: $('#title_color_input').val() || "#333",
+                        color: $('#title_colors_input').val() || "#333",
                         fontSize:$('#title_fontsize_input').val(),
                     }
                 }
