Add matrix-pure-template project

--- a/generic_portal_client/src/main/webapp/portal.html
+++ b/generic_portal_client/src/main/webapp/portal.html
@@ -135,13 +135,13 @@
                       </a>
                     </li>
                     <li>
-                      <a href="http://localhost:8080/generic_charting_client/" target="_blank">
+                      <a href="http://localhost:8080/generic_chart_client/" target="_blank">
                         <i class="fa fa-bar-chart-o"></i>
                         <div>Chart System</div>
                       </a>
                     </li>
                     <li>
-                      <a href="http://localhost:8080/generic_charting_client/" target="_blank">
+                      <a href="http://localhost:8080/generic_dashboard_client/" target="_blank">
                         <i class="fa fa-dashboard"></i>
                         <div>Dashboard</div>
                       </a>
@@ -156,6 +156,18 @@
                       <a href="http://localhost:8080/scripter_admin" target="_blank">
                         <i class="fa fa-flask"></i>
                         <div>Scripter admin</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://localhost:8080/scripter_client_v4" target="_blank">
+                        <i class="fa fa-flask"></i>
+                        <div>OpenDSG Client</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://localhost:8080/opendsg_portal" target="_blank">
+                        <i class="fa fa-flask"></i>
+                        <div>OpenDSG Portal</div>
                       </a>
                     </li>
                     <li>
@@ -182,6 +194,12 @@
                         <div>CBD Persona</div>
                       </a>
                     </li>
+                    <li>
+                      <a href="http://localhost:8080/new_energy_vehicle/" target="_blank">
+                        <i class="fa fa-automobile"></i>
+                        <div>New Energy</div>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -192,34 +210,52 @@
                     <li>
                       <a href="http://192.168.80.5:38080/generic_datasource_client/" target="_blank">
                         <i class="fa fa-database"></i>
-                        <div>Data Source</div>
+                        <div>Data Source 80</div>
                       </a>
                     </li>
                     <li>
                       <a href="http://192.168.80.5:38080/generic_chart_client/" target="_blank">
                         <i class="fa fa-line-chart"></i>
-                        <div>Chart</div>
+                        <div>Chart 80</div>
                       </a>
                     </li>
                     <li>
                       <a href="http://192.168.80.5:38080/generic_dashboard_client/" target="_blank">
                         <i class="fa fa-dashboard"></i>
-                        <div>Dashboard</div>
+                        <div>Dashboard 80</div>
                       </a>
                     </li>
                     <li>
                       <a href="http://192.168.80.5:38080/generic_report_client/" target="_blank">
                         <i class="fa fa-file-pdf-o"></i>
-                        <div>Report</div>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="" target="_blank">
-                        <i class="fa fa-cubes"></i>
-                        <div>ODA</div>
+                        <div>Report 80</div>
                       </a>
                     </li>
 
+                    <li>
+                      <a href="http://192.168.83.240:8080/generic_datasource_client/" target="_blank">
+                        <i class="fa fa-database"></i>
+                        <div>Data Source 83</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.83.240:8080/generic_chart_client/" target="_blank">
+                        <i class="fa fa-line-chart"></i>
+                        <div>Chart 83</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.83.240:8080/generic_dashboard_client/" target="_blank">
+                        <i class="fa fa-dashboard"></i>
+                        <div>Dashboard 83</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.83.240:8080/generic_report_client/" target="_blank">
+                        <i class="fa fa-file-pdf-o"></i>
+                        <div>Report 83</div>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -260,7 +296,25 @@
                   </ul>
                 </div>
               </div>
-
+              <div class="section">
+                <div class="section-title">Lab Science Platform</div>
+                <div class="section-body">
+                  <ul class="icons">
+                    <li>
+                      <a href="http://192.168.80.5:38080/opendsg_portal" target="_blank">
+                        <i class="fa fa-diamond"></i>
+                        <div>OpenDSG Portal</div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://192.168.83.242:8080/oda_portal" target="_blank">
+                        <i class="fa fa-eyedropper"></i>
+                        <div>ODA</div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
