--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
@@ -357,6 +357,7 @@
         'stringbeta':genericModalViewModel.businessPOJO().buildTag(),
         'deleted':false,
         'stringgamma':genericModalViewModel.businessPOJO().related_dataset(),
+        'numberalpha' : 0,
         'username': UserPOJO.user.userName
       }
       var data = {
