--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
@@ -156,9 +156,8 @@
         "attributes":{
           "id":ModalUtil.businessPOJO.data.id,
           "booleanalpha": true,
-          "booleanbeta":false,
-          "booleangamma":false,
-          "codejson":codejson
+          "codejson" : codejson,
+          "numberalpha" : 1
         }
     };
     var data = {
