--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_upload_image.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_upload_image.html
@@ -72,7 +72,7 @@
   function successListener_upload() {
     if (arguments && arguments[1]) {
 
-      var img_url_path = $.getServerRoot() + "/service_generic_query" + arguments[1].result[0].stringkappa;
+      var img_url_path = "/service_generic_query" + arguments[1].result[0].stringkappa;
       if (vm) {
         if(vm.uploadedFileUrls.indexOf(img_url_path)==-1){
           vm.uploadedFileUrls.push(img_url_path);
